--- a/china.html
+++ b/china.html
@@ -16,7 +16,7 @@
     <div class="section-box"> 
 <h1 class="my-h1">Destinations</h1>
 <div class="my-containerd">
-<img src="places.jpg" alt="" class="my-image1">
+<img src="images/places.jpg" alt="" class="my-image1">
 <div> 
 <p class="para1">China is known for its iconic landmarks like the Great Wall and the Forbidden City in Beijing, the Terracotta Army in Xi’an, and the futuristic skyline of Shanghai. Nature lovers admire the floating mountains of Zhangjiajie, the scenic rivers of Guilin and Yangshuo, and the Tibetan culture in Lhasa. Chengdu is famous for spicy food and being the home of giant pandas.</p>
 <button>
@@ -35,9 +35,9 @@
 
 <section class="section">
     <div class="section-box"> 
-<h1 class="my-h1">Destinations</h1>
+<h1 class="my-h1">Culture</h1>
 <div class="my-containerd">
-<img src="cultures.jpg" alt="" class="my-image1" height="480">
+<img src="images/cultures.jpg" alt="" class="my-image1" height="480">
 <div> 
 <p class="para1">China's culture and tradition are deeply rooted in thousands of years of history, emphasizing respect for family, harmony, and ancestral heritage. Traditional practices like Chinese New Year celebrations, tea ceremonies, and the use of feng shui reflect the importance of balance and spirituality. Confucian values, such as filial piety and moral integrity</p>
 <button>
@@ -58,7 +58,7 @@
     <div class="section-box"> 
 <h1 class="my-h1">Chinese Cuisine's</h1>
 <div class="my-containerd">
-<img src="cooking.jpg" alt="" class="my-image1" height="480">
+<img src="images/cooking.jpg" alt="" class="my-image1" height="480">
 <div> 
 <p class="para1">China's cuisine is one of the most diverse and flavorful in the world, known for its variety of ingredients, cooking techniques, and regional styles. It emphasizes balance in taste, texture, and color, often blending sweet, sour, salty, bitter, and spicy flavors in a single dish. Staple foods like rice, noodles, and dumplings are commonly enjoyed across the country.</p>
 <button>
