--- a/culture.html
+++ b/culture.html
@@ -16,24 +16,24 @@
 
         </nav>
         </header>
-        <img src="cultures.jpg"  class="img-1">
+        <img src="images/cultures.jpg"  class="img-1">
         
         <h1 class="h11">Traditions at the Heart of Chinese Culture</h1>
         <p class="p1">China’s traditions are grounded in millennia of practice, with an emphasis on family, respect for elders, and community. Rituals like tea ceremonies, ancestor worship, and the Lunar New Year celebrations reflect the values of respect, harmony, and prosperity.</p>
 
         <h1 class="cc">Chinese Tradition & Cultures</h1>
         <div class="container">
-            <div class="box" id="box1"><img src="newyear.webp" alt="" height="200px">
+            <div class="box" id="box1"><img src="images/newyear.webp" alt="" height="200px">
                 <div class="caption">Chinese New Year</div></div>
-            <div class="box" id="box2"><img src="zodiac.webp" alt="" height="200px">
+            <div class="box" id="box2"><img src="images/zodiac.webp" alt="" height="200px">
                 <div class="caption">Chinese Zodiac</div></div>
-            <div class="box" id="box3"><img src="history.webp" alt="" height="200px">
+            <div class="box" id="box3"><img src="images/history.webp" alt="" height="200px">
                 <div class="caption">Chinese History</div></div>
-            <div class="box" id="box4"><img src="marriage.webp" alt="" height="200px">
+            <div class="box" id="box4"><img src="images/marriage.webp" alt="" height="200px">
                 <div class="caption">Ancient Marriage Customs</div></div>
-            <div class="box" id="box5"><img src="clothing.webp" alt="" height="200px">
+            <div class="box" id="box5"><img src="images/clothing.webp" alt="" height="200px">
                 <div class="caption">Traditional Chinese Clothing</div></div>
-            <div class="box" id="box6"><img src="numbers.webp" alt="" height="200px">
+            <div class="box" id="box6"><img src="images/numbers.webp" alt="" height="200px">
                 <div class="caption">Lucky and Unlucky Numbers In China</div></div>
         </div>
 
@@ -46,11 +46,11 @@
             As of 2018, 53 noteworthy Chinese sites were inscribed on UNESCO's World Heritage List: 36 Cultural Heritage, 13 Natural Heritage, and 4 Cultural and Natural Heritage.</p>
         <div class="container2">
       <div class="images" class="img1">
-        <img src="heritage.webp" alt="" height="300px">
+        <img src="images/heritage.webp" alt="" height="300px">
         <div class="caption" id="captionn1">Chinese Heritage Sites </div>
       </div>
       <div class="images" id="img2">
-        <img src="currency.webp" alt="" height="300px">
+        <img src="images/currency.webp" alt="" height="300px">
         <div class="caption" id="caption2"> Chinese Ancient Currency</div>
       </div>
         </div>
@@ -64,27 +64,27 @@
 
             <div class="container3">
                 <div class="festival-images" id="fimg1"> 
-                    <img src="spring.webp" alt="" height="300px">
+                    <img src="images/spring.webp" alt="" height="300px">
                     <div class="caption">Chinese Spring Festival</div>
                 </div>
                 <div class="festival-images" id="fimg2"> 
-                    <img src="autumm.webp" alt="" height="300px">
+                    <img src="images/autumm.webp" alt="" height="300px">
                     <div class="caption">Mid-Autumm Festival</div>
                 </div>
                 <div class="festival-images" id="fimg3"> 
-                    <img src="boat.webp" alt="" height="300px">
+                    <img src="images/boat.webp" alt="" height="300px">
                     <div class="caption">Dragon Boat Festival</div>
                 </div>
                 <div class="festival-images" id="fimg4"> 
-                    <img src="sister.webp" alt="" height="300px">
+                    <img src="images/sister.webp" alt="" height="300px">
                     <div class="caption">Sister's Meal Festival</div>
                 </div>
                 <div class="festival-images" id="fimg5"> 
-                    <img src="tibetan.webp" alt="" height="300px">
+                    <img src="images/tibetan.webp" alt="" height="300px">
                     <div class="caption">Tibetan New Year</div>
                 </div>
                 <div class="festival-images" id="fimg6"> 
-                    <img src="shoton.webp" alt="" height="300px">
+                    <img src="images/shoton.webp" alt="" height="300px">
                     <div class="caption">Shoton Festival</div>
                 </div>
             </div> 
@@ -97,17 +97,17 @@
 
             <div class="container3">
                 <div class="boxxx"> 
-                    <img src="dragons.webp" alt="" height="300px">
+                    <img src="images/dragons.webp" alt="" height="300px">
                     <div class="caption">Chinese Dragons</div>
                 </div> 
 
                 <div class="boxxx"> 
-                    <img src="pandas.webp" alt="" height="300px">
+                    <img src="images/pandas.webp" alt="" height="300px">
                     <div class="caption">Chinese Pandas</div>
                 </div>
 
                 <div class="boxxx"> 
-                    <img src="greatwall.webp" alt="" height="300px">
+                    <img src="images/greatwall.webp" alt="" height="300px">
                     <div class="caption">Great Wall Of China</div>
                 </div>
             </div>
