--- a/destinations.html
+++ b/destinations.html
@@ -23,7 +23,7 @@
     </h1>
 
 
-    <img src="map.jpg" height="500" class="map" >
+    <img src="images/map.jpg" height="500" class="map" >
 
     <p class="dave2">If you're searching for a destination that blends history, culture, and awe-inspiring scenery, China should be at the top of your list. Every place holds a story, a wonder, and an experience you won’t find anywhere else. These top spots aren’t just places to visit  there are adventures waiting to happen.
 
@@ -32,23 +32,23 @@
 
     <div class="container">
         <div class="box" id="box1">
-     <img src="beijing.webp" alt="" height="200px">
+     <img src="images/beijing.webp" alt="" height="200px">
      <div class="caption"> Beijing</div>
         </div>
         <div class="box" id="box2">
-     <img src="xian.webp" alt="" height="200px">
+     <img src="images/xian.webp" alt="" height="200px">
      <div class="caption"> Xi'an</div>
         </div>
         <div class="box" id="box3">
-<img src="shanghai.webp" alt="" height="200px">
+<img src="images/shanghai.webp" alt="" height="200px">
 <div class="caption"> shanghai</div>
         </div>
         <div class="box" id="box4">
-    <img src="chengdu.webp" alt="" height="200px">
+    <img src="images/chengdu.webp" alt="" height="200px">
     <div class="caption"> Chengdu</div>
         </div>
         <div class="box" id="box5">
-            <img src="tibet.webp" alt="" height="200px">
+            <img src="images/tibet.webp" alt="" height="200px">
             <div class="caption"> Tibet</div>
         </div>
         <div class="box" id="box6">
@@ -56,27 +56,27 @@
             <div class="caption"> Zhangjiaje</div>
         </div>
         <div class="box" id="box7">
-            <img src="harbin.webp" alt="" height="200px">
+            <img src="images/harbin.webp" alt="" height="200px">
             <div class="caption"> Harbin</div>
         </div>
         <div class="box" id="box8">
-            <img src="yunnan.webp" alt="" height="200px">
+            <img src="images/yunnan.webp" alt="" height="200px">
             <div class="caption"> Yunnan</div>
         </div>
         <div class="box" id="box9">
-            <img src="silkroad.webp" alt="" height="200px">
+            <img src="images/silkroad.webp" alt="" height="200px">
             <div class="caption"> Silk Road</div>
         </div>
         <div class="box" id="box10">
-            <img src="huangshan.webp" alt="" height="200px">
+            <img src="images/huangshan.webp" alt="" height="200px">
             <div class="caption"> Huangshan</div>
         </div>
         <div class="box" id="box11">
-            <img src="xinjiang.webp" alt="" height="200px">
+            <img src="images/xinjiang.webp" alt="" height="200px">
             <div class="caption"> xinjiang</div>
         </div>
         <div class="box" id="box12">
-            <img src="yangtze.webp" alt="" height="200px">
+            <img src="images/yangtze.webp" alt="" height="200px">
             <div class="caption"> Yangtze River</div>
         </div>
     </div>
@@ -84,7 +84,7 @@
 
     <h1 class="dave">Province's Of China</h1>
     <p class="davep22" id="davep22"> Explore the vast and diverse provinces that make up China each with its own unique culture, history, and attractions. From the snowy mountains of Tibet to the bustling cities of Guangdong and Shanghai, this map highlights the key regions that shape the country’s rich identity. Let this be your guide as you discover where your next adventure begins.</p>
-    <img src="provinces.webp" alt="" height="700px" class="province">
+    <img src="images/provinces.webp" alt="" height="700px" class="province">
 
 
     <h1 class="Cities">Major Cities in China by Province/Region</h1>
