--- a/lifestyle.html
+++ b/lifestyle.html
@@ -17,7 +17,7 @@
         </nav>
         </header> 
 
-        <img src="foods2.webp" alt="China foods" class="food-img" >
+        <img src="images/foods2.webp" alt="China foods" class="food-img" >
 
         <h1 class="h1-header">Chinese Food Culture</h1>
         <p class="p1">
@@ -28,13 +28,13 @@
                 </p>
 
                 <div class="container">
-                    <div class="box" id="box1"><img src="north.webp" alt="" height="400">
+                    <div class="box" id="box1"><img src="images/north.webp" alt="" height="400">
                     <div class="caption"> Northern China Food</div></div> 
-                    <div class="box" id="box2"><img src="west.webp" alt="" height="400">
+                    <div class="box" id="box2"><img src="images/west.webp" alt="" height="400">
                     <div class="caption"> Western China Food</div></div>
-                    <div class="box" id="box3"><img src="central.webp" alt="" height="400">
+                    <div class="box" id="box3"><img src="images/central.webp" alt="" height="400">
                     <div class="caption"> Central China Food</div></div>
-                    <div class="box" id="box4"><img src="east.webp" alt="" height="400">
+                    <div class="box" id="box4"><img src="images/east.webp" alt="" height="400">
                     <div class="caption"> Eastern China Food</div></div>
                 </div> 
 
@@ -43,17 +43,17 @@
               <h1 class="h1-header">Most Famous Dishes</h1>      
 
               <div class="container2">
-                <div class="box"><img src="peking.webp" alt="" height="200">
+                <div class="box"><img src="images/peking.webp" alt="" height="200">
                 <div class="caption">Peking Roasted Duck</div></div>
-                <div class="box"><img src="kung.webp" alt="" height="200">
+                <div class="box"><img src="images/kung.webp" alt="" height="200">
                 <div class="caption">Kung Pao Chicken</div></div>
-                <div class="box"><img src="sweet.webp" alt="" height="200">
+                <div class="box"><img src="images/sweet.webp" alt="" height="200">
                 <div class="caption">Sweet And Sour Pork</div></div>
-                <div class="box"><img src="how.webp" alt="" height="200">
+                <div class="box"><img src="images/how.webp" alt="" height="200">
                 <div class="caption">Hot Pot</div></div>
-                <div class="box"><img src="dimsum.webp" alt="" height="200">
+                <div class="box"><img src="images/dimsum.webp" alt="" height="200">
                 <div class="caption">Dim Sum</div></div>
-                <div class="box"><img src="dump.webp" alt="" height="200">
+                <div class="box"><img src="images/dump.webp" alt="" height="200">
                 <div class="caption">Dumplings</div></div>
               </div> 
 
